crates/alder-parse/src/snapshots/alder_parse__query__tests__delete_where.snap
---
source: crates/alder-parse/src/query.rs
description: "query { delete from posts where posts.author == ^user.id }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 59,
        },
    },
    value: Query(
        Delete {
            table: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 21,
                    },
                    end: Position {
                        line: 1,
                        column: 26,
                    },
                },
                value: "posts",
            },
            where_: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 33,
                        },
                        end: Position {
                            line: 1,
                            column: 57,
                        },
                    },
                    value: BinOps {
                        operands: [
                            BinOpOperand {
                                expr: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 33,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 45,
                                        },
                                    },
                                    value: Access {
                                        record: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 33,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 38,
                                                },
                                            },
                                            value: Var(
                                                "posts",
                                            ),
                                        },
                                        field: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 39,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 45,
                                                },
                                            },
                                            value: "author",
                                        },
                                    },
                                },
                                op: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 46,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 48,
                                        },
                                    },
                                    value: Eq,
                                },
                            },
                        ],
                        last: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 49,
                                },
                                end: Position {
                                    line: 1,
                                    column: 57,
                                },
                            },
                            value: Pin(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 50,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 57,
                                        },
                                    },
                                    value: Access {
                                        record: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 50,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 54,
                                                },
                                            },
                                            value: Var(
                                                "user",
                                            ),
                                        },
                                        field: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 55,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 57,
                                                },
                                            },
                                            value: "id",
                                        },
                                    },
                                },
                            ),
                        },
                    },
                },
            ),
        },
    ),
}
