crates/alder-parse/src/snapshots/alder_parse__query__tests__docs_web_select_star_where.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users where users.id == event.params.id }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 64,
        },
    },
    value: Query(
        Select(
            Select {
                projection: Star(
                    Region {
                        start: Position {
                            line: 1,
                            column: 16,
                        },
                        end: Position {
                            line: 1,
                            column: 17,
                        },
                    },
                ),
                from: TableRef {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 23,
                            },
                            end: Position {
                                line: 1,
                                column: 28,
                            },
                        },
                        value: "users",
                    },
                    alias: None,
                },
                joins: [],
                where_: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 35,
                            },
                            end: Position {
                                line: 1,
                                column: 62,
                            },
                        },
                        value: BinOps {
                            operands: [
                                BinOpOperand {
                                    expr: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 35,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 43,
                                            },
                                        },
                                        value: Access {
                                            record: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 35,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 40,
                                                    },
                                                },
                                                value: Var(
                                                    "users",
                                                ),
                                            },
                                            field: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 41,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 43,
                                                    },
                                                },
                                                value: "id",
                                            },
                                        },
                                    },
                                    op: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 44,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 46,
                                            },
                                        },
                                        value: Eq,
                                    },
                                },
                            ],
                            last: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 47,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 62,
                                    },
                                },
                                value: Access {
                                    record: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 47,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 59,
                                            },
                                        },
                                        value: Access {
                                            record: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 47,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 52,
                                                    },
                                                },
                                                value: Var(
                                                    "event",
                                                ),
                                            },
                                            field: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 53,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 59,
                                                    },
                                                },
                                                value: "params",
                                            },
                                        },
                                    },
                                    field: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 60,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 62,
                                            },
                                        },
                                        value: "id",
                                    },
                                },
                            },
                        },
                    },
                ),
                group_by: [],
                order_by: [],
                limit: None,
                offset: None,
            },
        ),
    ),
}
