crates/alder-parse/src/snapshots/alder_parse__query__tests__error_alias.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users as }"
---
Query(
    Select(
        Table(
            Alias(
                1,
                32,
            ),
            1,
            23,
        ),
        1,
        9,
    ),
    1,
    1,
)
