crates/alder-parse/src/snapshots/alder_parse__query__tests__error_clause_from_repeated.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users from posts }"
---
Query(
    ClauseOrder(
        From,
        1,
        29,
    ),
    1,
    1,
)
