crates/alder-parse/src/snapshots/alder_parse__query__tests__error_clause_join_after_where.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users where users.active join posts on x }"
---
Query(
    ClauseOrder(
        Join,
        1,
        48,
    ),
    1,
    1,
)
