crates/alder-parse/src/snapshots/alder_parse__query__tests__error_clause_order.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users orderBy users.name where users.active }"
---
Query(
    ClauseOrder(
        Where,
        1,
        48,
    ),
    1,
    1,
)
