crates/alder-parse/src/snapshots/alder_parse__query__tests__error_clause_repeated.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users limit 1 limit 2 }"
---
Query(
    ClauseOrder(
        Limit,
        1,
        37,
    ),
    1,
    1,
)
