crates/alder-parse/src/snapshots/alder_parse__query__tests__error_delete_from.snap
---
source: crates/alder-parse/src/query.rs
description: "query { delete posts }"
---
Query(
    Delete(
        From(
            1,
            16,
        ),
        1,
        9,
    ),
    1,
    1,
)
