crates/alder-parse/src/snapshots/alder_parse__query__tests__error_delete_table.snap
---
source: crates/alder-parse/src/query.rs
description: "query { delete from }"
---
Query(
    Delete(
        Table(
            1,
            21,
        ),
        1,
        9,
    ),
    1,
    1,
)
