crates/alder-parse/src/snapshots/alder_parse__query__tests__error_end.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users on x }"
---
Query(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 7,
            },
            boundary: Position {
                line: 1,
                column: 28,
            },
            unexpected: Position {
                line: 1,
                column: 29,
            },
        },
    ),
    1,
    1,
)
