crates/alder-parse/src/snapshots/alder_parse__query__tests__error_insert_end.snap
---
source: crates/alder-parse/src/query.rs
description: "query { insert into users values ^rows where x }"
---
Query(
    OperationEnd(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 7,
            },
            boundary: Position {
                line: 1,
                column: 39,
            },
            unexpected: Position {
                line: 1,
                column: 40,
            },
        },
    ),
    1,
    1,
)
